--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,7 +24,7 @@
         android:id="@+id/createEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="14dp"
         android:ems="10"
         android:hint="@string/enter_your_email"
         android:inputType="textEmailAddress"
@@ -35,15 +35,12 @@
         android:id="@+id/createPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginTop="23dp"
         android:ems="10"
         android:hint="@string/create_your_password"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/errorMessages"
-        app:layout_constraintEnd_toStartOf="@+id/nextStepSignUp"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/errorMessages"
+        app:layout_constraintTop_toBottomOf="@+id/createEmail" />
 
     <Button
         android:id="@+id/join"
@@ -52,34 +49,33 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="33dp"
         android:text="@string/join"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/errorMessages" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/errorMessages"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="111dp"
+        android:layout_height="123dp"
+        android:layout_marginBottom="57dp"
         android:layout_marginEnd="34dp"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="61dp"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/join"
-        app:layout_constraintEnd_toEndOf="@+id/join"
+        app:layout_constraintBottom_toBottomOf="@+id/nextStepSignUp"
+        app:layout_constraintEnd_toEndOf="@+id/nextStepSignUp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nextStepSignUp" />
+        app:layout_constraintTop_toTopOf="@+id/createPassword" />
 
     <TextView
         android:id="@+id/accountCreationInstructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="157dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="25dp"
         android:text="@string/please_enter_your_credentials"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/nextStepSignUp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -87,21 +83,18 @@
         android:id="@+id/nextStepSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:text="next"
-        app:layout_constraintBottom_toTopOf="@+id/errorMessages"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/createPassword"
-        app:layout_constraintTop_toBottomOf="@+id/accountCreationInstructions" />
+        app:layout_constraintBottom_toTopOf="@+id/join"
+        app:layout_constraintStart_toStartOf="@+id/join" />
 
     <CheckBox
         android:id="@+id/setUserType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="43dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="31dp"
         android:text="Im a parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/errorMessages" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
