--- a/app/src/main/res/layout/activity_sign_up_optional_info.xml
+++ b/app/src/main/res/layout/activity_sign_up_optional_info.xml
@@ -25,9 +25,9 @@
         android:id="@+id/getAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="87dp"
+        android:layout_marginBottom="86dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
         android:hint="Address"
         android:inputType="textPersonName"
@@ -52,7 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="18dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="21dp"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toTopOf="@+id/emergencyInfo"
         app:layout_constraintEnd_toStartOf="@+id/years"
@@ -84,38 +84,37 @@
 
     <Spinner
         android:id="@+id/grade"
-        android:layout_width="0dp"
+        android:layout_width="158dp"
         android:layout_height="0dp"
         android:layout_marginBottom="217dp"
         android:layout_marginEnd="66dp"
         android:layout_marginTop="184dp"
         app:layout_constraintBottom_toTopOf="@+id/join2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/teachersName"
+        app:layout_constraintStart_toEndOf="@+id/birthDay"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/years"
-        android:layout_width="0dp"
+        android:layout_width="126dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="250dp"
-        android:layout_marginEnd="79dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/months"
-        app:layout_constraintTop_toBottomOf="@+id/grade" />
+        android:layout_marginBottom="18dp"
+        android:layout_marginStart="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/emergencyInfo"
+        app:layout_constraintStart_toStartOf="@+id/grade" />
 
     <TextView
         android:id="@+id/birthDay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
         android:layout_marginEnd="34dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:text="Birthday (MM/YY)"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/months"
-        app:layout_constraintEnd_toStartOf="@+id/years"
+        app:layout_constraintEnd_toStartOf="@+id/grade"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cellNumber" />
 
@@ -148,7 +147,7 @@
         android:id="@+id/greetingMessage"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginBottom="26dp"
         android:layout_marginEnd="89dp"
         android:layout_marginStart="16dp"
         android:textColor="@android:color/holo_red_dark"
@@ -157,5 +156,12 @@
         app:layout_constraintEnd_toStartOf="@+id/join2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emergencyInfo" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
 
 </android.support.constraint.ConstraintLayout>
