--- a/app/src/main/res/layout/activity_manage_groups.xml
+++ b/app/src/main/res/layout/activity_manage_groups.xml
@@ -10,15 +10,17 @@
 
     <TextView
         android:id="@+id/myGroupsView"
-        android:layout_width="wrap_content"
+        android:layout_width="364dp"
         android:layout_height="wrap_content"
-        android:text="@string/my_groups"
+        android:layout_marginLeft="16dp"
+        android:text="@string/my_groups_press_and_hold_on_a_group_to_set_it_as_your_current_group"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.032" />
+        app:layout_constraintVertical_bias="0.033" />
 
     <ListView
         android:id="@+id/myGroupsList"
@@ -26,9 +28,11 @@
         android:layout_height="245dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintVertical_bias="0.187" />
 
     <Button
         android:id="@+id/leaveGroupBtn"
